fix overflow on code

--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,7 @@ a:visited { color: #205caa; }
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  overflow:scroll;
   font-size: 15px;
 }
 
